apps/demo-service/overlays/prod/deployment-demo-service-three-replicas.yaml
# Parche estratégico: en producción se ejecutan tres réplicas.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-service
spec:
  replicas: 3
